# Customer-Enquiry-AI-Agent

./: Design_System_and_WCAG_AAA_Audit_Checklist.md  README.md  docker-compose.yml  new-designs-5-AIs.txt  plan-d-1.md  plan-o-1.md  plan-o-2-think.md  plan-o-2.md  plan-op-v1.md  plan-op-v2.md  plan-q-2.md  plan_q-1.md
Kimi-OK/: my_updated_merged_plan.md
backend/app/core/: compliance.py  multilingual.py
frontend/: tailwind.config.js.1
llm/: prompt-compare-plan.md  prompt-plan-ai-agent.md  prompt-refine-plan.md  q-1.md  q-3.md
opus-1/: .gitignore  README.md  exec-1.md  pyproject.toml
opus-1/backend/: .env.example  Dockerfile  requirements.txt
opus-1/backend/app/: config.py  main.py
opus-1/backend/app/api/routes/: chat.py  health.py  knowledge.py
opus-1/backend/app/models/: database.py  domain.py  schemas.py
opus-2/: .env.example  Makefile  exec-1.md
opus-2/backend/: alembic.ini  pyproject.toml  requirements.txt
opus-2/backend/alembic/: env.py
opus-2/backend/app/: __init__.py  config.py  database.py  dependencies.py  logging_config.py  main.py
opus-2/backend/app/api/routes/: chat.py  health.py  knowledge.py
opus-2/backend/app/models/: __init__.py  database.py  domain.py  schemas.py
opus-3/: .env.example  Makefile  README.md  docker-compose.yml  exec-1.md  file_hierarchy.txt
opus-3/backend/: pyproject.toml
opus-3/backend/app/: __init__.py  config.py  dependencies.py  logging_config.py  main.py
opus-3/backend/app/api/: __init__.py
opus-3/backend/app/api/routes/: __init__.py  chat.py  health.py  knowledge.py
opus-3/backend/app/models/: __init__.py  schemas.py
sonnet/: my_plan_A.md  my_plan_for_review-v2.md  my_plan_for_review-v3.md  plan-1.md  plan-ds-2.md  plan-g-2.md  plan-k2-1.md  plan-q-2.md  plan-z-2.md  plan-z-README.md  prompt-README.md  share-links.txt
