# ══════════════════════════════════════════════════════════════════════════════
# Singapore SMB Support Agent - Backend Package Configuration
# ══════════════════════════════════════════════════════════════════════════════

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "smb-support-agent"
version = "0.1.0"
description = "Production-ready AI customer support agent for Singapore SMBs"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "SMB Support Team", email = "support@example.com" }
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: FastAPI",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

# ─────────────────────────────────────────────────────────────────────────────
# Core Dependencies
# ─────────────────────────────────────────────────────────────────────────────
dependencies = [
    # FastAPI & Web
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "python-multipart>=0.0.12",
    "websockets>=13.1",
    "httpx>=0.27.2",
    
    # Pydantic & Validation
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "pydantic-ai>=0.0.24",
    
    # LangChain Ecosystem
    "langchain>=0.3.7",
    "langchain-core>=0.3.15",
    "langchain-openai>=0.2.6",
    "langchain-community>=0.3.5",
    "langchain-qdrant>=0.2.0",
    "langgraph>=0.2.45",
    
    # LLM Providers
    "openai>=1.55.0",
    "anthropic>=0.39.0",
    "cohere>=5.11.0",
    
    # Vector Database
    "qdrant-client>=1.12.0",
    
    # Embeddings (local option)
    "sentence-transformers>=3.3.0",
    
    # Database
    "sqlalchemy[asyncio]>=2.0.35",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    "greenlet>=3.1.1",
    
    # Redis
    "redis>=5.2.0",
    
    # Document Processing
    "unstructured>=0.16.5",
    "python-docx>=1.1.2",
    "pypdf>=5.1.0",
    "beautifulsoup4>=4.12.3",
    "lxml>=5.3.0",
    "markdown>=3.7",
    
    # Text Processing
    "tiktoken>=0.8.0",
    "nltk>=3.9.1",
    
    # Utilities
    "python-dateutil>=2.9.0",
    "pytz>=2024.2",
    "tenacity>=9.0.0",
    "structlog>=24.4.0",
    "python-dotenv>=1.0.1",
    "orjson>=3.10.11",
]

# ─────────────────────────────────────────────────────────────────────────────
# Development Dependencies
# ─────────────────────────────────────────────────────────────────────────────
[project.optional-dependencies]
dev = [
    # Testing
    "pytest>=8.3.3",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "pytest-mock>=3.14.0",
    "httpx>=0.27.2",
    "faker>=30.8.2",
    
    # RAG Evaluation
    "ragas>=0.2.6",
    "deepeval>=1.4.0",
    
    # Code Quality
    "ruff>=0.7.3",
    "mypy>=1.13.0",
    "pre-commit>=4.0.1",
    
    # Type Stubs
    "types-redis>=4.6.0",
    "types-python-dateutil>=2.9.0",
    
    # Documentation
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.5.42",
]

# ─────────────────────────────────────────────────────────────────────────────
# Tool Configuration
# ─────────────────────────────────────────────────────────────────────────────
[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
target-version = "py311"
line-length = 100
exclude = [
    ".git",
    ".venv",
    "__pycache__",
    "alembic",
]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults
    "B904",   # raise without from (sometimes intentional)
]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
filterwarnings = [
    "ignore::DeprecationWarning",
]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["app"]
branch = true
omit = [
    "*/tests/*",
    "*/__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]
